examples/bad/07_1_wrong_reference_pass.soy
def add_one(ref x = int) { # we cannot use ref with default arguments
    x = x + 1;
}

add_one(3); # we cannot use ref with non-identifiers